package lab_4.actions;

import lab_4.objects.ThisObject;

public interface CheckInterface {
    public boolean check(ThisObject object);
}
